--- a/about.html
+++ b/about.html
@@ -1,71 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>About – Campus Life Toolkit</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<header class="site-header">
-  <div class="container header-inner">
-    <h1 class="logo">
-      <a href="index.html">Campus Life Toolkit</a>
-    </h1>
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="about.html" class="active">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<main class="container main-content">
-  <h2>About Me</h2>
-  <p>
-    Hey, I’m Siria and I’m a college student who also creates content
-    on social media. I share my daily life on campus, study sessions, and
-    realistic “what I actually eat” kinds of meals that you can make on
-    a student budget.
-  </p>
-  <p>
-    I started this website as a place where I could go a bit deeper than
-    a short video or Instagram caption. Here you’ll find study tips,
-    product recommendations, and simple recipes that fit into a busy
-    student schedule.
-  </p>
-
-  <h3>What You’ll Find Here</h3>
-  <ul class="list">
-    <li><strong>Study essentials:</strong> tech, stationery and small things that make revision less painful.</li>
-    <li><strong>Budget cooking:</strong> easy recipes and basic tools that work in tiny student kitchens.</li>
-    <li><strong>Realistic routines:</strong> ideas for organising your time without pretending everything is perfect.</li>
-  </ul>
-
-  <h3>How I Choose Products</h3>
-  <p>
-    Whenever I talk about a product, it’s either something I already use
-    or something I’ve researched for myself as a student. If there are
-    affiliate links on a page, it means I may earn a small commission if
-    you decide to buy through those links. This helps support my content
-    and the time I spend testing and reviewing things, but it never changes
-    the price for you.
-  </p>
-
-  <p>
-    If you want to see more of my day-to-day student life, you can find me
-    on Instagram at <_siriaalicata>.
-  </p>
-</main>
-
-<footer class="site-footer">
-  <div class="container">
-    <p>&copy; <span id="year"></span> Campus Life Toolkit. All rights reserved.</p>
-  </div>
-</footer>
-
-<script>
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
-</body>
-</html>
+<empty file>
